--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,57 @@
-/* No CSS */
+header {
+  height: 100vh;
+}
+
+.premierbg {
+  overflow: hidden;
+  filter: brightness(25%);
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../img/banner1.jpg);
+}
+
+.navBar-trans {
+  padding-top: 80px;
+  position: relative;
+}
+
+.mainbg {
+  background-image: url(../../img/main_bg.jpg);
+  height: 100vh;
+  width: 100%;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+.secondbg {
+  background-color: white;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.top-deco {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.top-deco-rigth {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.bottom-deco-rigth {
+  position: absolute;
+  right: 0;
+}
+
+.bottomdeco {
+  height: 2vh;
+  position: absolute;
+  background-image: url(../../img/bottom_decoration_img.png);
+  bottom: 0;
+  width: 100%;
+}
