début Book your table

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap')
+
+body
+    font-family: 'Courgette', cursive
+
+
+    
 header
     height: 100vh
 .premierbg
@@ -18,17 +25,31 @@ header
 
 .mainbg
     background-image: url(../../img/main_bg.jpg)
-    height: 100vh
+    height: 210vh
     width: 100%
-    padding-left: 200px
-    padding-right: 200px
+    padding-left: 100px
+    padding-right: 100px
     
+.mainbg1
+    background-image: url(../../img/main_bg.jpg)
+    height: 210vh
+    width: 100%
+    padding-left: 100px
+    padding-right: 100px
+    position: absolute
+
 .secondbg
     background-color: white
     width: 100%
-    height: 100vh
+    height: 200vh
     position: relative
    
+.secondbg1
+    background-color: white
+    width: 100%
+    height: 200vh
+    position: relative
+// decoration 
 .top-deco
     position: absolute
     top: 0
@@ -37,13 +58,15 @@ header
     position: absolute
     top: 0
     right: 0
-.bottom-deco-rigth
+.bottom-deco-right
     position: absolute
-    bottom:O
+    bottom: 0
     right: 0
+.bottom-deco-left
+    position: absolute
+    bottom: 0
+    left: 0
     
-
-
 .bottomdeco
     height: 2vh
     position: absolute
@@ -51,3 +74,28 @@ header
     bottom: 0
     width: 100%
 
+.OurStory
+    margin: auto
+    width: 50%
+    text-align: center
+    margin-top: 40px
+.ourMenuList
+    text-align: center  
+.lesCafé
+    img
+        height: 90px
+        border: 3px solid blue
+
+.meetOurChef
+    background-image: url(../../img/team_background.jpg)
+    height: 600px
+    width: 100%
+    background-repeat: no-repeat
+    position: absolute
+    background-size: 900%
+    background-position: 48% 42%
+    
+.texte-centrer
+    position: relative
+.imageDeChef
+    position: relative
