--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Courgette&display=swap");
+body {
+  font-family: 'Courgette', cursive;
+}
+
 header {
   height: 100vh;
 }
@@ -18,16 +24,32 @@ header {
 
 .mainbg {
   background-image: url(../../img/main_bg.jpg);
-  height: 100vh;
+  height: 210vh;
   width: 100%;
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.mainbg1 {
+  background-image: url(../../img/main_bg.jpg);
+  height: 210vh;
+  width: 100%;
+  padding-left: 100px;
+  padding-right: 100px;
+  position: absolute;
 }
 
 .secondbg {
   background-color: white;
   width: 100%;
-  height: 100vh;
+  height: 200vh;
+  position: relative;
+}
+
+.secondbg1 {
+  background-color: white;
+  width: 100%;
+  height: 200vh;
   position: relative;
 }
 
@@ -43,9 +65,16 @@ header {
   right: 0;
 }
 
-.bottom-deco-rigth {
+.bottom-deco-right {
   position: absolute;
+  bottom: 0;
   right: 0;
+}
+
+.bottom-deco-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .bottomdeco {
@@ -54,4 +83,38 @@ header {
   background-image: url(../../img/bottom_decoration_img.png);
   bottom: 0;
   width: 100%;
+}
+
+.OurStory {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.ourMenuList {
+  text-align: center;
+}
+
+.lesCafé img {
+  height: 90px;
+  border: 3px solid blue;
+}
+
+.meetOurChef {
+  background-image: url(../../img/team_background.jpg);
+  height: 600px;
+  width: 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-size: 900%;
+  background-position: 48% 42%;
+}
+
+.texte-centrer {
+  position: relative;
+}
+
+.imageDeChef {
+  position: relative;
 }
