--- a/sass/style.sass
+++ b/sass/style.sass
@@ -43,7 +43,7 @@ header
     width: 100%
     height: 200vh
     position: relative
-   
+
 .secondbg1
     background-color: white
     width: 100%
@@ -99,3 +99,15 @@ header
     position: relative
 .imageDeChef
     position: relative
+
+.bgBook
+    background-image: url(../../img/book_table_bg.jpg)
+    padding: 200px
+    background-repeat: no-repeat
+    background-position: center
+    
+
+.pbgbook
+    max-width: 800px
+    padding-bottom: 350px
+
