--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,27 +1,102 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap')
-
 body
+    font-family: sans-serif
+header
+    height: 110vh
+h2
+    font-family: 'Courgette', cursive
+.Itext
     font-family: 'Courgette', cursive
 
-
+// .occasionFont
+//     font-size: 90px
+// .text-carou
+//     font-size: 50px
+//     height: 800px
+//     width: 1400px
+//     text-align: center
+//     margin: auto
     
-header
-    height: 100vh
-.premierbg
-    overflow: hidden   
-    filter: brightness(25%)
-    position: absolute
-    width: 100%
-    height: 100vh
-    background-image: url(../../img/banner1.jpg)
-.navBar-trans
-    padding-top: 80px
-    position: relative
+
+// .tasteFont
+//     font-size: 80px
+    
+
+// .Carouselle
+//     overflow: hidden   
+//     filter: brightness(40%)
+//     position: absolute
+//     width: 100%
+//     height: 100vh
+    
+// nav
+//     position: relative
+//     width: 100%
+    
+// .navBar-trans
+//     padding-top: 50px
+    
 // .imgdeco
 //     height: 200px
 //     width: 100%
 //     position: absolute
 //     padding-top: 
+
+
+.carousel
+    filter: brightness(40%)  
+.bold
+    font-weight: bold
+    font-size: 1.7em
+.navbar
+    color: #f8f8f8
+    text-decoration: none
+    display: flex
+    justify-content: center
+    align-items: center
+    position: absolute
+    top: 10%
+    left: 25%
+    transform: translate(-16%, -50%)
+    img
+        margin: 0px 20px
+.nav
+    border-top: solid #fcfafa 1px
+    border-bottom: solid #fcfafa 1px
+        // margin: 0px 40px
+.nav-item
+    padding-right: 10px 
+    
+.text
+    text-align: center
+    position: absolute
+    top: 250%
+    left: 30%
+    transform: translate(-20%, -50%)
+    padding-top: 300px
+.PremierText
+    font-family: 'Courgette', cursive
+    padding-top: 70px
+.maFont
+    font-size: 1.3em
+
+.couleurRouge
+    color: #c43844
+    font-size: 1.7em
+.DeuxiemeText
+    padding-top: 30px
+.btn1
+    border-radius: 20px
+    padding: 10px
+    font-family: Georgia, 'Times New Roman',Times, serif
+    font-size: 0.8em
+.btn2
+    border-radius: 20px
+    color: #f3f3f3 
+    background-color:  #c43844
+    padding: 10px
+    font-family: Georgia, 'Times New Roman',Times, serif
+    font-size: 0.8em
 
 .mainbg
     background-image: url(../../img/main_bg.jpg)
@@ -32,22 +107,22 @@ header
     
 .mainbg1
     background-image: url(../../img/main_bg.jpg)
-    height: 210vh
+    height: 280vh
     width: 100%
     padding-left: 100px
     padding-right: 100px
-    position: absolute
+    
 
 .secondbg
     background-color: white
     width: 100%
-    height: 200vh
+    height: 180vh
     position: relative
 
 .secondbg1
     background-color: white
     width: 100%
-    height: 200vh
+    height: 270vh
     position: relative
 // decoration 
 .top-deco
@@ -84,7 +159,7 @@ header
 .lesCafé
     img
         height: 90px
-        border: 3px solid blue
+        border: 3px solid #dbdbdb
 
 .meetOurChef
     background-image: url(../../img/team_background.jpg)
@@ -107,7 +182,67 @@ header
     background-position: center
     
 
+    
+
+
+
+
+.lesIcons
+    border-right: 3px solid #c42d40
+    i
+        color: #dbdbdb
+
+.couleurRouge
+    color: #c42d40
+
+.Price
+    color: #c42d40
+    background-color: #dbdbdb
+    padding-left: 12px
+    padding-right: 12px
+    margin-left: -20px
+    
+
 .pbgbook
     max-width: 800px
-    padding-bottom: 350px
+    padding-bottom: 35px
 
+.booknow
+    border-radius: 30px
+    width: 150px
+    background-color: #c42d40
+.input-group > .form-control, .input-group > .form-select
+    border-radius: 10px
+
+.input
+    margin-bottom: 200px
+
+.leZindex
+    background-color: #c42d40
+    width: 435px
+   
+.img-fluid
+
+.ClientTestimonials
+    background-image: url(../../img/testimonials_background.jpg)
+    height: 400px
+    width: 100%
+    background-repeat: no-repeat
+    position: absolute
+    background-size: 1500%
+    background-position: 80% 66%
+
+.try
+    position: relative
+
+.contactUs
+    background-image: url(../../img/main_bg.jpg)
+    width: 100%
+    height: 150vh
+    position: relative
+
+.cardContact
+    background-color: #c42d40
+    height: 400px
+    width: 400px
+    font-size: 20px
