--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,13 +257,41 @@ h2 {
 .contactUs {
   background-image: url(../../img/main_bg.jpg);
   width: 100%;
-  height: 150vh;
+  height: 100vh;
   position: relative;
 }
 
 .cardContact {
   background-color: #c42d40;
-  height: 400px;
-  width: 400px;
+  height: 430px;
+  width: 430px;
   font-size: 20px;
+  margin: auto;
+  margin-top: 5%;
+}
+
+.footerDeco {
+  height: 3vh;
+  position: absolute;
+  position-background-image: url(../../img/footer_bottom_decoration_img.png);
+  top: 0;
+  width: 100%;
+}
+
+.bgFooter {
+  background-image: url(../../img/footer_background.jpg);
+  height: 50vh;
+  width: 100%;
+  position: relative;
+}
+
+.rounded-pill {
+  border: 1px solid white;
+  background-color: red;
+}
+
+.lebgrouge {
+  height: 100px;
+  width: 100%;
+  background-color: #c42d40;
 }
