--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,7 +61,8 @@ h2 {
 
 .PremierText {
   font-family: 'Courgette', cursive;
-  padding-top: 70px;
+  padding-top: -10px;
+  padding-left: 50px;
 }
 
 .maFont {
@@ -103,7 +104,7 @@ h2 {
 
 .mainbg1 {
   background-image: url(../../img/main_bg.jpg);
-  height: 280vh;
+  height: 240vh;
   width: 100%;
   padding-left: 100px;
   padding-right: 100px;
@@ -119,7 +120,7 @@ h2 {
 .secondbg1 {
   background-color: white;
   width: 100%;
-  height: 270vh;
+  height: 230vh;
   position: relative;
 }
 
@@ -191,9 +192,13 @@ h2 {
 
 .bgBook {
   background-image: url(../../img/book_table_bg.jpg);
-  padding: 200px;
+  padding: 100px;
   background-repeat: no-repeat;
   background-position: center;
+  border-radius: 20px;
+  background-size: cover;
+  height: 600px;
+  margin-bottom: 30px;
 }
 
 .lesIcons {
@@ -235,9 +240,19 @@ h2 {
   margin-bottom: 200px;
 }
 
-.leZindex {
-  background-color: #c42d40;
-  width: 435px;
+.imgblog {
+  border: 3px solid #bdbdbd;
+  border-radius: 20px;
+}
+
+.divImg1 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.divImg2 {
+  display: flex;
+  justify-content: flex-start;
 }
 
 .ClientTestimonials {
@@ -248,6 +263,29 @@ h2 {
   position: absolute;
   background-size: 1500%;
   background-position: 80% 66%;
+}
+
+.imgTesti {
+  width: 160px;
+  border: 2px solid white;
+}
+
+.imgTesti1 {
+  margin-right: 75px;
+}
+
+.divTesti {
+  display: flex;
+  align-items: center;
+}
+
+.colTesti {
+  border-radius: 10px;
+  width: 380px;
+}
+
+.testi {
+  height: 400px;
 }
 
 .try {
@@ -268,14 +306,7 @@ h2 {
   font-size: 20px;
   margin: auto;
   margin-top: 5%;
-}
-
-.footerDeco {
-  height: 3vh;
-  position: absolute;
-  position-background-image: url(../../img/footer_bottom_decoration_img.png);
-  top: 0;
-  width: 100%;
+  border-radius: 15px;
 }
 
 .bgFooter {
@@ -287,11 +318,63 @@ h2 {
 
 .rounded-pill {
   border: 1px solid white;
-  background-color: red;
+  background-color: #c42d40;
+  font-size: 13px;
 }
 
 .lebgrouge {
   height: 100px;
   width: 100%;
   background-color: #c42d40;
+}
+
+.carrerouge {
+  background-color: #c42d40;
+  font-size: 25px;
+  width: 390px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  margin-top: -20px;
+  margin-left: 33px;
+  border-radius: 12px;
+}
+
+.carrerouge1 {
+  background-color: #c42d40;
+  font-size: 25px;
+  width: 390px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+  margin-top: -20px;
+  margin-left: 150px;
+  border-radius: 12px;
+}
+
+.borderImg {
+  border-radius: 12px;
+  border: 4px solid #dbdbdb;
+}
+
+.IMG1 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.IMG2 {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ok {
+  margin-right: 100px;
 }
