--- a/sass/style.sass
+++ b/sass/style.sass
@@ -76,7 +76,8 @@ h2
     padding-top: 300px
 .PremierText
     font-family: 'Courgette', cursive
-    padding-top: 70px
+    padding-top: -10px
+    padding-left: 50px
 .maFont
     font-size: 1.3em
 
@@ -107,12 +108,13 @@ h2
     
 .mainbg1
     background-image: url(../../img/main_bg.jpg)
-    height: 280vh
+    height: 240vh
     width: 100%
     padding-left: 100px
     padding-right: 100px
     
 
+    
 .secondbg
     background-color: white
     width: 100%
@@ -122,7 +124,7 @@ h2
 .secondbg1
     background-color: white
     width: 100%
-    height: 270vh
+    height: 230vh
     position: relative
 // decoration 
 .top-deco
@@ -177,9 +179,13 @@ h2
 
 .bgBook
     background-image: url(../../img/book_table_bg.jpg)
-    padding: 200px
+    padding: 100px
     background-repeat: no-repeat
     background-position: center
+    border-radius: 20px
+    background-size: cover
+    height: 600px
+    margin-bottom: 30px
     
 
     
@@ -217,11 +223,17 @@ h2
 .input
     margin-bottom: 200px
 
-.leZindex
-    background-color: #c42d40
-    width: 435px
-   
-.img-fluid
+.imgblog
+    border: 3px solid #bdbdbd
+    border-radius: 20px
+
+.divImg1
+    display: flex
+    justify-content: flex-end 
+
+.divImg2
+    display: flex
+    justify-content: flex-start
 
 .ClientTestimonials
     background-image: url(../../img/testimonials_background.jpg)
@@ -231,9 +243,26 @@ h2
     position: absolute
     background-size: 1500%
     background-position: 80% 66%
+.imgTesti
+    width: 160px
+    border: 2px solid white
+.imgTesti1
+   margin-right: 75px
+
+.divTesti
+    display: flex
+    align-items: center
+.colTesti
+    border-radius: 10px
+    width: 380px
+
+.testi
+    height: 400px
 
 .try
     position: relative
+
+
 
 .contactUs
     background-image: url(../../img/main_bg.jpg)
@@ -248,13 +277,9 @@ h2
     font-size: 20px
     margin: auto
     margin-top: 5%
+    border-radius: 15px
 
-.footerDeco
-    height: 3vh
-    position: absolute
-     background-image: url(../../img/footer_bottom_decoration_img.png)
-    top:  0
-    width: 100%
+
 
 .bgFooter
     background-image: url(../../img/footer_background.jpg)
@@ -264,8 +289,54 @@ h2
 
 .rounded-pill
     border: 1px solid white
-    background-color: red
+    background-color: #c42d40
+    font-size: 13px
 .lebgrouge
     height: 100px
     width: 100%
     background-color: #c42d40
+    
+.carrerouge
+    background-color: #c42d40
+    font-size: 25px
+    width: 390px
+    height: 40px
+    display: flex
+    align-items: center
+    justify-content: center
+    text-align: center
+    position: relative
+    z-index: 2
+    margin-top: -20px
+    margin-left: 33px
+    border-radius: 12px
+
+.carrerouge1
+    background-color: #c42d40
+    font-size: 25px
+    width: 390px
+    height: 40px
+    display: flex
+    align-items: center
+    justify-content: center
+    text-align: center
+    position: relative
+    z-index: 2
+    margin-top: -20px
+    margin-left: 150px
+    border-radius: 12px
+.borderImg
+    border-radius: 12px
+    border: 4px solid #dbdbdb
+.IMG1
+    display: flex
+    justify-content: flex-end
+.IMG2
+    display: flex
+    justify-content: flex-start
+    
+.ok
+    margin-right: 100px
+
+
+    
