--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,12 @@ h2
 .Itext
     font-family: 'Courgette', cursive
 
+a:hover 
+    background-color: #c43844
+i:hover
+    color: #c43844
+
+
 // .occasionFont
 //     font-size: 90px
 // .text-carou
@@ -197,7 +203,11 @@ h2
     border-right: 3px solid #c42d40
     i
         color: #dbdbdb
+        
 
+.lesIcons:hover
+    color: #c43844
+    
 .couleurRouge
     color: #c42d40
 
