--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,7 +89,7 @@ i:hover {
 .btn1 {
   border-radius: 20px;
   padding: 10px;
-  font-family: Georgia, 'Times New Roman',Times, serif;
+  font-family: sans-serif;
   font-size: 0.8em;
 }
 
@@ -98,7 +98,7 @@ i:hover {
   color: #f3f3f3;
   background-color: #c43844;
   padding: 10px;
-  font-family: Georgia, 'Times New Roman',Times, serif;
+  font-family: sans-serif;
   font-size: 0.8em;
 }
 
@@ -326,6 +326,10 @@ i:hover {
   height: 50vh;
   width: 100%;
   position: relative;
+}
+
+.footerDeco {
+  position: absolute;
 }
 
 .rounded-pill {
