--- a/sass/style.sass
+++ b/sass/style.sass
@@ -95,14 +95,14 @@ i:hover
 .btn1
     border-radius: 20px
     padding: 10px
-    font-family: Georgia, 'Times New Roman',Times, serif
+    font-family: sans-serif
     font-size: 0.8em
 .btn2
     border-radius: 20px
     color: #f3f3f3 
     background-color:  #c43844
     padding: 10px
-    font-family: Georgia, 'Times New Roman',Times, serif
+    font-family: sans-serif
     font-size: 0.8em
 
 .mainbg
@@ -207,7 +207,8 @@ i:hover
 
 .lesIcons:hover
     color: #c43844
-    
+
+
 .couleurRouge
     color: #c42d40
 
@@ -296,6 +297,8 @@ i:hover
     height: 50vh
     width: 100%
     position: relative
+.footerDeco
+    position: absolute
 
 .rounded-pill
     border: 1px solid white
